fix: unalign p

--- a/src/index.css
+++ b/src/index.css
@@ -273,3 +273,8 @@
     background-position: 489px;
   }
 }
+
+
+/* *{
+  outline: 1px solid red;
+} */
